bat.string1.lessons.bat.string1.StringTimes.scala.error
stringTimes:2: error: type mismatch;
 found   : Unit
 required: String
  for(i<-1 to n){
       ^