bat.string1.lessons.bat.string1.StringTimes.scala.code
def stringTimes(str:String, n:Int):String = {
  for(i<-1 to n){
    println(str);
  }
}